Make `static final Set` constants immutable
EnumSet is mutable => wrap with Collections.unmodifiableSet().
For other cases use the wrapping, Set.of() or Collectors.toUnmodifiableSet() as appropriate.